--- a/Hide UI/itemV2.cfg
+++ b/Hide UI/itemV2.cfg
@@ -1,23 +1,22 @@
 title = "Hide UI";
 description = "This mod adds a keybind that allows you to quickly toggle the UI on or off.
 Comes with three modes:
--Partial will allow you turn off most of the UI, but keeps some prompts, subtitles and twitch mode votes. Acts exactly like the Act on Instinct mutator. Better suited for normal gameplay.
--Complete will turn the UI off completely, best suited for screenshots.
--Complete with no arms is the same as Complete, but it will also hide the first person arms and weapon. Best suited for taking screenshots of the scenery.
+-[b][u]Partial[/u][/b] will allow you turn off most of the UI, but keeps some prompts, subtitles and twitch mode votes. Acts exactly like the Act on Instinct mutator. Better suited for normal gameplay.
+-[b][u]Complete[/u][/b] will turn the UI off completely, best suited for screenshots.
+-[b][u]Camera[/u][/b] is the same as Complete, but it will also hide the first person arms and weapon. Best suited for taking screenshots of the scenery.
 
-Note: You cannot use the toggle while inspecting the character.
-This is my first mod! Please let me know if you find any issues. I'm going to apply it for sanctioning if it doesn't break anything.
+This is my first mod! Please let me know if you find any issues.
 
 Special thanks to all these patient, lovely people that helped me make this!
-Zaphio
 raindish
-SkacikPL
+Zaphio
 prop joe
+SkacikPL
 Sir Aiedail";
 preview = "item_preview.png";
 content = "bundleV2";
 language = "english";
 visibility = "public";
 published_id = 2007374303L;
-apply_for_sanctioned_status = false;
+apply_for_sanctioned_status = true;
 tags = ["UI"];
