--- a/Hide UI/itemV2.cfg
+++ b/Hide UI/itemV2.cfg
@@ -5,6 +5,8 @@ Comes with three modes:
 -[b][u]Complete[/u][/b] will turn the UI off completely, best suited for screenshots.
 -[b][u]Camera[/u][/b] is the same as Complete, but it will also hide the first person arms and weapon. Best suited for taking screenshots of the scenery.
 
+NEW: Also has a checkbox you can toggle to tell the mod that you want to keep the outline system turned on even while my mod is hiding the UI.
+
 This is my first mod! Please let me know if you find any issues.
 
 Special thanks to all these patient, lovely people that helped me make this!
